--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
   <title>Marco Giuseppe de Pinto | Web Development, Project Management, Business Analyst, Data Analysis. </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-59556770-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-59556770-2');
+  </script>
   <link rel="stylesheet" href="assets/css/styles.css"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  
   <link rel="icon" href="assets/images/favicon-32x32.png">
 
 </head>
@@ -33,7 +42,7 @@
       <h3>About me</h3>
     </div>
     <div class="col-sm-10" id="myStory">
-      <p>Working in a multinational company on digital transformation projects, with an impact on 500+ users in 8 EMEA – LATAM countries, from the initial ideation through final execution, <br></p>
+      <p>Working in a multinational company on digital transformation projects, from the initial ideation through final execution, with an impact on 500+ users in 8 EMEA – LATAM countries.<br></p>
       <p>Operating at both business and technical level in fast paced environments, with solid communication and presentation skills and a background cultivating relationships with stakeholders from very diverse backgrounds.<br></p>
       <p>Coordinating diverse, cross-functional teams, definining plans and setting goals with the aim of maintaining productivity while working through challenging deadlines.<br></p>
       <p>Analyzing large, complex data sets to collect information, create metrics and reports and drive business decisions at all levels of the organization.<br></p>
