new style for the main page

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     gtag('config', 'UA-59556770-2');
   </script>
   <link rel="stylesheet" href="assets/css/styles.css"/>
+  <script src="assets/js/script.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   
   <link rel="icon" href="assets/images/favicon-32x32.png">
 
 </head>
-<body style="background-color:#e7f1f5">
-<div class="jumbotron text-center" id="myJumbotron" style="background-color:white">
+<body style="background-color:white">
+<div class="jumbotron text-center" id="Jumbotron1" style="background-color:white">
   <img src="assets/images/VAL_7302.JPG" class="img-responsive" alt="Pic" width="170" height="170" id="myImg">
   <h1>Marco Giuseppe de Pinto</h1>
   <p>"I have no special talent: I am only passionately curious."</p>
@@ -36,59 +36,21 @@
   </p>
 </div>
 
-<div class="container" id="infoContainer">
-  <div class="row">
-    <div class="col-sm-2" id="aboutMeDescription">
-      <h3>About me</h3>
-    </div>
-    <div class="col-sm-10" id="myStory">
-      <p>Working in a multinational company on digital transformation projects, from the initial ideation through final execution, with an impact on 500+ users in 8 EMEA – LATAM countries.<br></p>
-      <p>Operating at both business and technical level in fast paced environments, with solid communication and presentation skills and a background cultivating relationships with stakeholders from very diverse backgrounds.<br></p>
-      <p>Coordinating diverse, cross-functional teams, definining plans and setting goals with the aim of maintaining productivity while working through challenging deadlines.<br></p>
-      <p>Analyzing large, complex data sets to collect information, create metrics and reports and drive business decisions at all levels of the organization.<br></p>
-      <p>Traveling across the world to roll out projects and collect product feedback: already visited customers in Italy, Brazil and Romania.<br></p>
-      <p>Using social media to instill curiosity about how simple and beautiful coding is.<br></p>
-    </div>
-  </div>
-</div>
-
-<div class="container" id="whyContainer">
-  <div class="row">
-    <div class="col-sm-2" id="whyCoding">
-      <h3>Skills</h3>
-    </div>
-    <div class="col-sm-10" id="whyCodingDescription">
-      <p><b>Big Data Analysis</b><br>
-         SQL, Python, Excel, Tableau, Scikit-Learn, Pandas, Matplotlib, Numpy, Seaborn, Jupyter Notebook<br></p>
-      <p><b>Web Development</b><br>
-         HTML, CSS, Javascript, Python (Django), Git<br></p>
-      <p><b>Languages</b><br>
-         Italian, English (fluent, IELTS Academic 7 - 2015)<br></p>
-      </p>
-    </div>
-  </div>
-</div>
-
-<div class="container" id="projectsContainer">
-  <div class="row">
-    <div class="col-sm-2" id="projectsDescription">
-      <h3>Projects</h3>
-    </div>
-    <div class="col-sm-10" id="projectsStory">
-      <p><a href="https://www.kaggle.com/marcogdepinto/titanic-with-python-first-competition">- Analysis of the Titanic dataset (actually top 6% in the Kaggle leaderboard).</a></p>
-      <p><a href="https://www.kaggle.com/marcogdepinto/let-s-discover-more-about-the-olympic-games">- Olympic Games History Data Analysis</a></p>
-      <p><a href="https://www.kaggle.com/marcogdepinto/2016-presidential-elections-on-facebook">- Analysis of the 2016 presidential elections on Facebook</a></p>
-    </div>
-  </div>
-</div>
-
-<div class="container" id="mapContainer">
+<div class="jumbotron text-center" id="Jumbotron2" style="background-color:#e4f1f4">
   <div class="row">
     <div class="col-sm-12" id="mapDesc">
-      <h3>Countries I have worked with</h3>
+      <h2>I have worked with</h2>
     </div>
     <div class="col-sm-12" id="mapPic">
       <img src="assets/images/amCharts1.png" class="img-responsive" alt="Pic">
+    </div>
+  </div>
+</div>
+
+<div class="jumbotron text-center" id="Jumbotron3" style="background-color:white">
+  <div class="row">
+    <div class="col-sm-12" id="myStory" style="background-color:white">
+      <img src="assets/images/Technologies.JPG" class="img-responsive" alt="Pic">
     </div>
   </div>
 </div>
@@ -100,7 +62,7 @@
       <a href="https://www.kaggle.com/marcogdepinto">&nbsp;&nbsp;Kaggle&nbsp;&nbsp;</a>
       <a href="https://github.com/marcogdepinto" title="Progetti">&nbsp;&nbsp;Projects&nbsp;&nbsp;</a>
       <a href="#" title="Contatti">&nbsp;&nbsp;Contacts&nbsp;&nbsp;</a>
-      <h6> © 2018 Marco Giuseppe de Pinto. All rights reserved. </h6>
+      <h6> © 2019 Marco Giuseppe de Pinto. All rights reserved. </h6>
     </p>
   </div>
 </div>
