Changed pictures format for speed

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 
 </head>
 <body style="background-color:white">
+
 <div class="jumbotron text-center" id="Jumbotron1" style="background-color:white">
-  <img src="assets/images/VAL_7302.JPG" class="img-responsive" alt="Pic" width="170" height="170" id="myImg">
+  <img src="assets/images/VAL_7302.jpeg" class="img-responsive" alt="Pic" width="170" height="170" id="myImg">
   <h1>Marco Giuseppe de Pinto</h1>
   <p>"I have no special talent: I am only passionately curious."</p>
   <p>
@@ -39,10 +40,10 @@
 <div class="jumbotron text-center" id="Jumbotron2" style="background-color:#e4f1f4">
   <div class="row">
     <div class="col-sm-12" id="mapDesc">
-      <h2>I have worked with</h2>
+      <h3>Countries I have worked with during my career</h3>
     </div>
     <div class="col-sm-12" id="mapPic">
-      <img src="assets/images/amCharts1.png" class="img-responsive" alt="Pic">
+      <img src="assets/images/amCharts1.jpeg" class="img-responsive" alt="Pic">
     </div>
   </div>
 </div>
@@ -50,7 +51,7 @@
 <div class="jumbotron text-center" id="Jumbotron3" style="background-color:white">
   <div class="row">
     <div class="col-sm-12" id="myStory" style="background-color:white">
-      <img src="assets/images/Technologies.JPG" class="img-responsive" alt="Pic">
+      <img src="assets/images/Technologies.jpeg" class="img-responsive" alt="Pic">
     </div>
   </div>
 </div>
