--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Marco Giuseppe de Pinto | Web Development, Project Management, Business Analyst, Data Analysis. </title>
+  <title>Marco Giuseppe de Pinto | Web Development, Project Management, Business Analyst, Data Analysis.</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Experienced consultant specialized in data and business analysis, project management, software and web development, machine learning, deep learning and artificial intelligence.">
+  <meta property="og:title" content="Marco Giuseppe de Pinto | Web Development, Project Management, Business Analyst, Data Analysis.">
+  <meta property="og:url" content="https://marcogdepinto.com/">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-59556770-2"></script>
   <script>
