--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
 
 <div class="jumbotron text-center" id="Jumbotron3" style="background-color:white">
   <div class="row">
+    <div class="col-sm-12" id="myStory" style="background-color:white">
       <img src="assets/images/Technologies.jpeg" class="img-responsive" alt="Pic">
+    </div>
   </div>
 </div>
 
