--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 
 <div class="jumbotron text-center" id="Jumbotron3" style="background-color:white">
   <div class="row">
+    <div class="col-sm-12" id="myStoryDesc">
+      <h2>What I learned on the way</h2>
+    </div>
     <div class="col-sm-12" id="myStory" style="background-color:white">
       <img src="assets/images/Technologies.jpeg" class="img-responsive" alt="Pic">
     </div>
