--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Experienced consultant specialized in data and business analysis, project management, software and web development, machine learning, deep learning and artificial intelligence.">
-  <meta property="og:title" content="Marco Giuseppe de Pinto | Web Development, Project Management, Business Analyst, Data Analysis.">
+  <meta property="og:title" content="Marco Giuseppe de Pinto | Project Management, Program Management, Business Analyst, Data Analysis.">
   <meta property="og:url" content="https://marcogdepinto.com/">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-59556770-2"></script>
@@ -27,7 +27,7 @@
 <body style="background-color:white">
 
 <div class="jumbotron text-center" id="Jumbotron1" style="background-color:white">
-  <img src="assets/images/VAL_7302.jpeg" class="img-responsive" alt="Pic" width="170" height="170" id="myImg">
+  <img src="assets/images/VAL_7302.jpeg" class="img-responsive" alt="Pic" width="300" height="300" id="myImg">
   <h1>Marco Giuseppe de Pinto</h1>
   <p>"I have no special talent: I am only passionately curious."</p>
   <p>
