--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Marco Giuseppe de Pinto | Web Development, Project Management, Business Analyst, Data Analysis.</title>
+  <title>Marco Giuseppe de Pinto | Project Management, Program Management, Business Analyst, Data Analysis.</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Experienced consultant specialized in data and business analysis, project management, software and web development, machine learning, deep learning and artificial intelligence.">
@@ -29,7 +29,7 @@
 <div class="jumbotron text-center" id="Jumbotron1" style="background-color:white">
   <img src="assets/images/VAL_7302.jpeg" class="img-responsive" alt="Pic" width="300" height="300" id="myImg">
   <h1>Marco Giuseppe de Pinto</h1>
-  <h2>Junior ACES Subject Matter Expert @ Amazon</h2>
+  <h3>Junior ACES Subject Matter Expert @ Amazon</h3>
   <p>"I have no special talent: I am only passionately curious."</p>
   <p>
     <a href="mailto:marcog.depinto@gmail.com" title="Gmail"><i class="fa fa-envelope" style="font-size: 30px;"></i></a>
