--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Marco Giuseppe de Pinto | Project Management, Program Management, Business Analyst, Data Analysis.</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Experienced consultant specialized in data and business analysis, project management, software and web development, machine learning, deep learning and artificial intelligence.">
+  <meta name="description" content="Experienced Project Manager, Data Analyst and Program Manager with an expertise in data analysis and visualization, process optimization and continuous improvement, he has managed complex operational and strategical initiatives with increasing levels of responsibility and independence, serving technical and non-technical customers.">
   <meta property="og:title" content="Marco Giuseppe de Pinto | Project Management, Program Management, Business Analyst, Data Analysis.">
   <meta property="og:url" content="https://marcogdepinto.com/">
   <!-- Global site tag (gtag.js) - Google Analytics -->
