--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Marco Giuseppe de Pinto | Project Management, Program Management, Business Analyst, Data Analysis.</title>
+  <title>Marco Giuseppe de Pinto | Project Management, Program Management, Business Analyst and Data Analysis @ Amazon.</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Experienced Project Manager, Data Analyst and Program Manager with an expertise in data analysis and visualization, process optimization and continuous improvement, he has managed complex operational and strategical initiatives with increasing levels of responsibility and independence, serving technical and non-technical customers.">
-  <meta property="og:title" content="Marco Giuseppe de Pinto | Project Management, Program Management, Business Analyst, Data Analysis.">
+  <meta property="og:title" content="Marco Giuseppe de Pinto | Project Management, Program Management, Business Analyst and Data Analysis @ Amazon.">
   <meta property="og:url" content="https://marcogdepinto.com/">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-59556770-2"></script>
@@ -29,7 +29,7 @@
 <div class="jumbotron text-center" id="Jumbotron1" style="background-color:white">
   <img src="assets/images/VAL_7302.jpeg" class="img-responsive" alt="Pic" width="300" height="300" id="myImg">
   <h1>Marco Giuseppe de Pinto</h1>
-  <h3>Junior ACES SME Outbound @ Amazon</h3>
+  <h3>Junior ACES SME @ Amazon</h3>
   <p>"I have no special talent: I am only passionately curious."</p>
   <p>
     <a href="mailto:marcog.depinto@gmail.com" title="Gmail"><i class="fa fa-envelope" style="font-size: 30px;"></i></a>
