--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
   <p>
     <a href="mailto:marcog.depinto@gmail.com" title="Gmail"><i class="fa fa-envelope" style="font-size: 30px;"></i></a>
     <a href="https://www.linkedin.com/in/marcogdepinto/" title="LinkedIn"><i class="fa fa-linkedin" style="font-size: 30px;"></i></a>
-    <a href="https://twitter.com/marcogdepinto" title="Twitter"><i class="fa fa-twitter" style="font-size: 30px;"></i></a>
     <a href="https://github.com/marcogdepinto" title="Github"><i class="fa fa-github" style="font-size: 30px;"></i></a>
     <a href="https://www.youtube.com/channel/UC6sZWF6eORBxlhetDyntZYg/featured?view_as=public" title="YouTube"><i class="fa fa-youtube" style="font-size: 30px;"></i></a>
   </p>
@@ -57,7 +56,7 @@
       <h3>What I learned on the way</h3>
     </div>
     <div class="col-sm-12" id="myStory" style="background-color:white">
-      <img src="assets/images/Technologies.jpeg" class="img-responsive" alt="Pic">
+      <img src="assets/images/Technologies.jpeg" class="img-responsive" alt="Pic" id="Python&SQL&Tableau&Excel&Lean&SixSigma&5s">
     </div>
   </div>
 </div>
