--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <a href="mailto:marcog.depinto@gmail.com" title="Gmail"><i class="fa fa-envelope" style="font-size: 30px;"></i></a>
     <a href="https://www.linkedin.com/in/marcogdepinto/" title="LinkedIn"><i class="fa fa-linkedin" style="font-size: 30px;"></i></a>
     <a href="https://github.com/marcogdepinto" title="Github"><i class="fa fa-github" style="font-size: 30px;"></i></a>
+    <a href="https://www.kaggle.com/marcogdepinto" title="Kaggle"><i class="fab fa-kaggle" style="font-size: 30px;"></i></a>
     <a href="https://www.youtube.com/channel/UC6sZWF6eORBxlhetDyntZYg/featured?view_as=public" title="YouTube"><i class="fa fa-youtube" style="font-size: 30px;"></i></a>
   </p>
 </div>
