--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
     <a href="mailto:marcog.depinto@gmail.com" title="Gmail"><i class="fa fa-envelope" style="font-size: 30px;"></i></a>
     <a href="https://www.linkedin.com/in/marcogdepinto/" title="LinkedIn"><i class="fa fa-linkedin" style="font-size: 30px;"></i></a>
     <a href="https://github.com/marcogdepinto" title="Github"><i class="fa fa-github" style="font-size: 30px;"></i></a>
-    <a href="https://www.kaggle.com/marcogdepinto" title="Kaggle"><i class="fa fa-kaggle" style="font-size: 30px;"></i></a>
     <a href="https://www.youtube.com/channel/UC6sZWF6eORBxlhetDyntZYg/featured?view_as=public" title="YouTube"><i class="fa fa-youtube" style="font-size: 30px;"></i></a>
   </p>
 </div>
@@ -66,8 +65,9 @@
   <div class="jumbotron text-center" style="background-color:white">
     <p>
       <a href="#Jumbotron1" title="Home">&nbsp;&nbsp;Home&nbsp;&nbsp;</a>
-      <a href="https://www.kaggle.com/marcogdepinto">&nbsp;&nbsp;Kaggle&nbsp;&nbsp;</a>
       <a href="https://github.com/marcogdepinto" title="Progetti">&nbsp;&nbsp;Projects&nbsp;&nbsp;</a>
+      <a href="https://www.kaggle.com/marcogdepinto">&nbsp;&nbsp;Kaggle&nbsp;&nbsp;</a>
+      <a href="https://public.tableau.com/profile/marco.giuseppe.de.pinto#!/">&nbsp;&nbsp;Tableau Public&nbsp;&nbsp;</a>
       <a href="#" title="Contatti">&nbsp;&nbsp;Contacts&nbsp;&nbsp;</a>
       <h6> © 2019 Marco Giuseppe de Pinto. All rights reserved. </h6>
     </p>
