--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <p>"I have no special talent: I am only passionately curious."</p>
   <p>
     <a href="mailto:marcog.depinto@gmail.com" title="Gmail"><i class="fa fa-envelope" style="font-size: 30px;"></i></a>
-    <a href="https://drive.google.com/open?id=1GSmYxqyymHFV4TJZFmF81MDXGnj1NJnV" title="Resume"><i class="fas fa-file" style="font-size: 30px;"></i></a>
+    <a href="https://drive.google.com/open?id=1GSmYxqyymHFV4TJZFmF81MDXGnj1NJnV" title="Resume"><i class="fa fa-file" style="font-size: 30px;"></i></a>
     <a href="https://www.linkedin.com/in/marcogdepinto/" title="LinkedIn"><i class="fa fa-linkedin" style="font-size: 30px;"></i></a>
     <a href="https://github.com/marcogdepinto" title="Github"><i class="fa fa-github" style="font-size: 30px;"></i></a>
     <a href="https://www.youtube.com/channel/UC6sZWF6eORBxlhetDyntZYg/featured?view_as=public" title="YouTube"><i class="fa fa-youtube" style="font-size: 30px;"></i></a>
@@ -66,7 +66,7 @@
   <div class="jumbotron text-center" style="background-color:white">
     <p>
       <a href="#Jumbotron1" title="Home">&nbsp;&nbsp;Home&nbsp;&nbsp;</a>
-      <a href="https://drive.google.com/open?id=1GSmYxqyymHFV4TJZFmF81MDXGnj1NJnV" title="Resume">&nbsp;&nbsp;Projects&nbsp;&nbsp;</a>
+      <a href="https://drive.google.com/open?id=1GSmYxqyymHFV4TJZFmF81MDXGnj1NJnV" title="Resume">&nbsp;&nbsp;Resume&nbsp;&nbsp;</a>
       <a href="https://github.com/marcogdepinto" title="Progetti">&nbsp;&nbsp;Projects&nbsp;&nbsp;</a>
       <a href="https://www.kaggle.com/marcogdepinto">&nbsp;&nbsp;Kaggle&nbsp;&nbsp;</a>
       <a href="https://public.tableau.com/profile/marco.giuseppe.de.pinto#!/">&nbsp;&nbsp;Tableau Public&nbsp;&nbsp;</a>
