--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <div class="jumbotron text-center" id="Jumbotron2" style="background-color:#e4f1f4">
   <div class="row">
     <div class="col-sm-12" id="mapDesc">
-      <h3>Countries I have worked with during my career</h3>
+      <h2><i>Countries I have worked with during my career</i></h2>
     </div>
     <div class="col-sm-12" id="mapPic">
       <img src="assets/images/amCharts1.jpeg" class="img-responsive" alt="Pic">
@@ -53,17 +53,52 @@
 
 <div class="jumbotron text-center" id="Jumbotron3" style="background-color:white">
   <div class="row">
-    <div class="col-sm-12" id="myStoryDesc">
-      <h3>What I learned on the way</h3>
-    </div>
     <div class="col-sm-12" id="myStory" style="background-color:white">
       <img src="assets/images/Technologies.jpeg" class="img-responsive" alt="Pic" id="Python&SQL&Tableau&Excel&Lean&SixSigma&5s">
     </div>
   </div>
 </div>
 
-<div class="panel-footer panel-custom" id="myFooter" style="background-color:white">
-  <div class="jumbotron text-center" style="background-color:white">
+<div class="jumbotron text-center" id="Jumbotron4" style="background-color:#e4f1f4">
+  <div class="row">
+    <div class="col-sm-12" id="myProjects">
+      <h2><i>A few fun Python projects I built</i></h2>
+    </div>
+  </div>
+  <div class="row" style="background-color:white">
+    <div class="col-sm-12" id="myProject1description">
+      <h3><a href="https://github.com/marcogdepinto/Emotion-Classification-Ravdess"><i>1 - Convolutional neural networks to classify emotions using audio signal</i></a></h3>
+    </div>
+    <div class="col-sm-6" id="myProject1pic1" style="background-color:white">
+      <img src="assets/images/accuracy.png" class="img-responsive" alt="Pic" id="DeepLearningModelAccuracy">
+    </div>
+    <div class="col-sm-6" id="myProject1pic2" style="background-color:white">
+      <img src="assets/images/loss.png" class="img-responsive" alt="Pic" id="DeepLearningModelLoss">
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12" id="myProject2description" style="background-color:white">
+      <h3><a href="https://github.com/marcopoli/Identification-of-Twitter-bots-using-CNN"><i>2 - Identification of bot accounts in Twitter using 2D Convolutional Neural Networks on user-generated contents</i></a></h3>
+  </div>
+  <div class="row">
+    <div class="col-sm-12" id="myProject2pic2" style="background-color:white">
+      <img src="assets/images/model_n.png" class="img-responsive" alt="Pic" id="DeepLearningModelStructure">
+    </div>
+  </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12" id="myProject3description" style="background-color:white">
+      <h3><a href="https://github.com/marcogdepinto/ScenarioClassifier"><i>3 - Scenario classification using Python, Keras and Convolutional Neural Networks</i></a></h3>
+  </div>
+  <div class="row" id="lastRow">
+    <div class="col-sm-12" id="myProject3pic2" style="background-color:white">
+      <img src="assets/images/model.png" class="img-responsive" alt="Pic" id="DeepLearningModelMetrics">
+    </div>
+  </div>
+</div>
+
+  <div class="panel-footer panel-custom" id="myFooter" style="background-color:#e4f1f4">
+  <div class="jumbotron text-center" style="background-color:#e4f1f4">
     <p>
       <a href="#Jumbotron1" title="Home">&nbsp;&nbsp;Home&nbsp;&nbsp;</a>
       <a href="https://drive.google.com/open?id=1GSmYxqyymHFV4TJZFmF81MDXGnj1NJnV" title="Resume">&nbsp;&nbsp;Resume&nbsp;&nbsp;</a>
@@ -76,4 +111,3 @@
   </div>
 </div>
 </body>
-</html>
