fixed background colors

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </div>
 </div>
 
-<div class="jumbotron text-center" id="Jumbotron4" style="background-color:#e4f1f4">
+<div class="jumbotron text-center" id="Jumbotron4" style="background-color:white">
   <div class="row">
     <div class="col-sm-12" id="myProjects">
       <h2><i>A few fun Python projects I built</i></h2>
@@ -97,8 +97,8 @@
   </div>
 </div>
 
-  <div class="panel-footer panel-custom" id="myFooter" style="background-color:#e4f1f4">
-  <div class="jumbotron text-center" style="background-color:#e4f1f4">
+  <div class="panel-footer panel-custom" id="myFooter" style="background-color:white">
+  <div class="jumbotron text-center" style="background-color:white">
     <p>
       <a href="#Jumbotron1" title="Home">&nbsp;&nbsp;Home&nbsp;&nbsp;</a>
       <a href="https://drive.google.com/open?id=1GSmYxqyymHFV4TJZFmF81MDXGnj1NJnV" title="Resume">&nbsp;&nbsp;Resume&nbsp;&nbsp;</a>
