--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <div class="jumbotron text-center" id="Jumbotron2" style="background-color:#e4f1f4">
   <div class="row">
     <div class="col-sm-12" id="mapDesc">
-      <h2><i>Countries I have worked with during my career</i></h2>
+      <h3><i>Countries I have worked with during my career</i></h3>
     </div>
     <div class="col-sm-12" id="mapPic">
       <img src="assets/images/amCharts1.jpeg" class="img-responsive" alt="Pic">
@@ -59,10 +59,10 @@
   </div>
 </div>
 
-<div class="jumbotron text-center" id="Jumbotron4" style="background-color:white">
+<div class="jumbotron text-center" id="Jumbotron4" style="background-color:#e4f1f4">
   <div class="row">
     <div class="col-sm-12" id="myProjects">
-      <h2><i>A few fun Python projects I built</i></h2>
+      <h3><i>A few fun Python projects I built</i></h3>
     </div>
   </div>
   <div class="row" style="background-color:white">
