--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
   </div>
 </div>
 
-<div class="jumbotron text-center" id="Jumbotron4" style="background-color:#e4f1f4">
+<div class="jumbotron text-center" id="Jumbotron4" style="background-color:white">
   <div class="row">
-    <div class="col-sm-12" id="myProjects">
+    <div class="col-sm-12" id="myProjects" style="background-color:white">
       <h3><i>A few fun Python projects I built</i></h3>
     </div>
   </div>
