--- a/index.html
+++ b/index.html
@@ -59,12 +59,15 @@
   </div>
 </div>
 
-<div class="jumbotron text-center" id="Jumbotron4" style="background-color:white">
+<div class="jumbotron text-center" id="Jumbotron5" style="background-color:#e4f1f4">
   <div class="row">
-    <div class="col-sm-12" id="myProjects" style="background-color:white">
+    <div class="col-sm-12" id="myProjects" style="background-color:#e4f1f4">
       <h3><i>A few fun Python projects I built</i></h3>
     </div>
   </div>
+</div>
+
+<div class="jumbotron text-center" id="Jumbotron4" style="background-color:white">
   <div class="row" style="background-color:white">
     <div class="col-sm-12" id="myProject1description">
       <h3><a href="https://github.com/marcogdepinto/Emotion-Classification-Ravdess"><i>1 - Convolutional neural networks to classify emotions using audio signal</i></a></h3>
