added links to keywords

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <div class="jumbotron text-center" id="Jumbotron5" style="background-color:#e4f1f4">
   <div class="row">
     <div class="col-sm-12" id="myProjects" style="background-color:#e4f1f4">
-      <h3><i>A few fun Python projects I built</i></h3>
+      <h3><i>A few fun <a href="https://www.python.org/">Python<a/> projects I built</i></h3>
     </div>
   </div>
 </div>
@@ -91,7 +91,7 @@
   </div>
   <div class="row">
     <div class="col-sm-12" id="myProject3description" style="background-color:white">
-      <h3><a href="https://github.com/marcogdepinto/ScenarioClassifier"><i>3 - Scenario classification using Python, Keras and Convolutional Neural Networks</i></a></h3>
+      <h3><a href="https://github.com/marcogdepinto/ScenarioClassifier"><a>3 - Scenario classification using Python, <a href="https://keras.io/>">Keras</a> and Convolutional Neural Networks</i></a></h3>
   </div>
   <div class="row" id="lastRow">
     <div class="col-sm-12" id="myProject3pic2" style="background-color:white">
