added links to keywords

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <div class="jumbotron text-center" id="Jumbotron5" style="background-color:#e4f1f4">
   <div class="row">
     <div class="col-sm-12" id="myProjects" style="background-color:#e4f1f4">
-      <h3><i>A few fun</i> <a href="https://www.python.org/"><i>Python</i><a/> <i>projects I built</i></h3>
+      <h3><i>A few fun <a href="https://www.python.org/">Python</a> projects I built</i></h3>
     </div>
   </div>
 </div>
