--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Marco Giuseppe de Pinto | Project Management, Program Management, Business Analyst and Data Analysis @ Amazon.</title>
+  <title>Marco Giuseppe de Pinto | Data Scientist - Working at Amazon as Process Engineer.</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Experienced Project Manager, Data Analyst and Program Manager with an expertise in data analysis and visualization, process optimization and continuous improvement, he has managed complex operational and strategical initiatives with increasing levels of responsibility and independence, serving technical and non-technical customers.">
-  <meta property="og:title" content="Marco Giuseppe de Pinto | Project Management, Program Management, Business Analyst and Data Analysis @ Amazon.">
+  <meta name="description" content="Expert in cross-functional project management, product management, data analysis, Agile methodology, business analysis, change management, continuous improvement and cost reduction initiatives.">
+  <meta property="og:title" content="Marco Giuseppe de Pinto | Data Scientist - Working at Amazon as Process Engineer.">
   <meta property="og:url" content="https://marcogdepinto.com/">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-59556770-2"></script>
