--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div class="jumbotron text-center" id="Jumbotron1" style="background-color:white">
   <img src="assets/images/VAL_7302.jpeg" class="img-responsive" alt="Pic" width="300" height="300" id="myImg">
   <h1>Marco Giuseppe de Pinto</h1>
-  <h3>Process Engineer, Junior Customer Excellence System Subject Matter Expert (SME) at <a href="https://www.amazon.it/">Amazon</a>. Ex <a href="https://www.wolterskluwer.com/">Wolters Kluwer.</a></h3>
+  <h3>Process Engineer, Junior SME at <a href="https://www.amazon.it/">Amazon</a>. Ex <a href="https://www.wolterskluwer.com/">Wolters Kluwer.</a></h3>
   <p>"I have no special talent: I am only passionately curious."</p>
   <p>
     <a href="mailto:marcog.depinto@gmail.com" title="Gmail"><i class="fa fa-envelope" style="font-size: 30px;"></i></a>
