--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Marco Giuseppe de Pinto | Data Scientist - Working at Amazon as Process Engineer.</title>
+  <title>Marco Giuseppe de Pinto | Data Scientist and Python developer - Working at Amazon as Process Engineer.</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Expert in cross-functional project management, product management, data analysis, Agile methodology, business analysis, change management, continuous improvement and cost reduction initiatives.">
-  <meta property="og:title" content="Marco Giuseppe de Pinto | Data Scientist - Working at Amazon as Process Engineer.">
+  <meta name="description" content="Expert in cross-functional project management, program management, data analysis, Agile methodology, business analysis, software development, change management, continuous improvement and cost reduction initiatives.">
+  <meta property="og:title" content="Marco Giuseppe de Pinto | Data Scientist and Python developer - Working at Amazon as Process Engineer.">
   <meta property="og:url" content="https://marcogdepinto.com/">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-59556770-2"></script>
