--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Marco Giuseppe de Pinto | Data Scientist and Python developer - Working at Amazon as Process Engineer.</title>
+  <title>Marco Giuseppe de Pinto | Program Manager - Working at Amazon as Process Engineer.</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Expert in cross-functional project management, program management, data analysis, Agile methodology, business analysis, software development, change management, continuous improvement and cost reduction initiatives.">
-  <meta property="og:title" content="Marco Giuseppe de Pinto | Data Scientist and Python developer - Working at Amazon as Process Engineer.">
+  <meta name="description" content="Expert in cross-functional project management, program management, Python software development, data science.">
+  <meta property="og:title" content="Marco Giuseppe de Pinto | Program Manager - Working at Amazon as Process Engineer.">
   <meta property="og:url" content="https://marcogdepinto.com/">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-59556770-2"></script>
@@ -29,11 +29,10 @@
 <div class="jumbotron text-center" id="Jumbotron1" style="background-color:white">
   <img src="assets/images/VAL_7302.jpeg" class="img-responsive" alt="Pic" width="300" height="300" id="myImg">
   <h1>Marco Giuseppe de Pinto</h1>
-  <h3>Process Engineer, Junior SME at <a href="https://www.amazon.it/">Amazon</a>. Ex <a href="https://www.wolterskluwer.com/">Wolters Kluwer</a>.</h3>
+  <h3>Process Engineer, Jr. SME at <a href="https://www.amazon.it/">Amazon</a>. Ex <a href="https://www.wolterskluwer.com/">Wolters Kluwer</a>.</h3>
   <p>"I have no special talent: I am only passionately curious."</p>
   <p>
     <a href="mailto:marcog.depinto@gmail.com" title="Gmail"><i class="fa fa-envelope" style="font-size: 30px;"></i></a>
-    <a href="https://drive.google.com/open?id=1DeiBUIhEjNovdVL7ldJKojv_dk1B4_O6" title="Resume"><i class="fa fa-file" style="font-size: 30px;"></i></a>
     <a href="https://www.linkedin.com/in/marcogdepinto/" title="LinkedIn"><i class="fa fa-linkedin" style="font-size: 30px;"></i></a>
     <a href="https://github.com/marcogdepinto" title="Github"><i class="fa fa-github" style="font-size: 30px;"></i></a>
   </p>
@@ -62,7 +61,6 @@
   <div class="jumbotron text-center" style="background-color:white">
     <p>
       <a href="#Jumbotron1" title="Home">&nbsp;&nbsp;Home&nbsp;&nbsp;</a>
-      <a href="https://drive.google.com/open?id=19jAEtMAqeeV0z9VJWBtV8WsqWcTcdJpv" title="Resume">&nbsp;&nbsp;Resume&nbsp;&nbsp;</a>
       <a href="https://github.com/marcogdepinto" title="Progetti">&nbsp;&nbsp;Projects&nbsp;&nbsp;</a>
       <a href="https://www.kaggle.com/marcogdepinto">&nbsp;&nbsp;Kaggle&nbsp;&nbsp;</a>
       <a href="https://public.tableau.com/profile/marco.giuseppe.de.pinto#!/">&nbsp;&nbsp;Tableau Public&nbsp;&nbsp;</a>
