--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Marco Giuseppe de Pinto | Process Manager at Amazon.</title>
+  <title>Marco G. de Pinto | Process Manager at Amazon.</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Expert in cross-functional project management, program management, Python software development, change management and process engineering.">
-  <meta property="og:title" content="Marco Giuseppe de Pinto | Process Manager at Amazon.">
+  <meta property="og:title" content="Marco G. de Pinto | Process Manager at Amazon.">
   <meta property="og:url" content="https://marcogdepinto.com/">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-59556770-2"></script>
@@ -28,8 +28,8 @@
 
 <div class="jumbotron text-center" id="Jumbotron1" style="background-color:white">
   <img src="assets/images/VAL_7302.jpeg" class="img-responsive" alt="Pic" width="300" height="300" id="myImg">
-  <h1>Marco Giuseppe de Pinto</h1>
-  <h3>Process Manager at <a href="https://www.amazon.it/">Amazon</a>. Ex <a href="https://www.wolterskluwer.com/">Wolters Kluwer</a>.</h3>
+  <h1>Marco G. de Pinto</h1>
+  <h3>Process Manager at <a href="https://www.amazon.it/">Amazon</a></h3>
   <p>"I have no special talent: I am only passionately curious."</p>
   <p>
     <a href="mailto:marcog.depinto@gmail.com" title="Gmail"><i class="fa fa-envelope" style="font-size: 30px;"></i></a>
@@ -53,7 +53,7 @@
       <a href="https://github.com/marcogdepinto" title="Progetti">&nbsp;&nbsp;Projects&nbsp;&nbsp;</a>
       <a href="https://public.tableau.com/profile/marco.giuseppe.de.pinto#!/">&nbsp;&nbsp;Tableau Public&nbsp;&nbsp;</a>
       <a href="#" title="Contatti">&nbsp;&nbsp;Contacts&nbsp;&nbsp;</a>
-      <h6> © 2019 Marco Giuseppe de Pinto. All rights reserved. </h6>
+      <h6> © 2020 Marco Giuseppe de Pinto. All rights reserved. </h6>
     </p>
   </div>
 </div>
