--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
 <div class="jumbotron text-center" id="Jumbotron1" style="background-color:white">
   <img src="assets/images/VAL_7302.jpeg" class="img-responsive" alt="Pic" width="300" height="300" id="myImg">
-  <h1>Marco G. de Pinto</h1>
-  <h3>Process Manager at <a href="https://www.amazon.it/">Amazon</a></h3>
+  <h2>Marco G. de Pinto</h2>
+  <h4>Process Manager at <a href="https://www.amazon.it/">Amazon</a></h4>
   <p>
     <a href="mailto:marcog.depinto@gmail.com" title="Gmail"><i class="fa fa-envelope" style="font-size: 30px;"></i></a>
     <a href="https://www.linkedin.com/in/marcogdepinto/" title="LinkedIn"><i class="fa fa-linkedin" style="font-size: 30px;"></i></a>
@@ -41,7 +41,7 @@
   <div class="jumbotron text-center" style="background-color:white">
     <p>
       <a href="#Jumbotron1" title="Home">&nbsp;&nbsp;Home&nbsp;&nbsp;</a>
-      <a href="https://github.com/marcogdepinto" title="Progetti">&nbsp;&nbsp;Projects&nbsp;&nbsp;</a>
+      <a href="https://github.com/marcogdepinto" title="Github">&nbsp;&nbsp;Projects&nbsp;&nbsp;</a>
       <a href="https://public.tableau.com/profile/marco.giuseppe.de.pinto#!/">&nbsp;&nbsp;Tableau Public&nbsp;&nbsp;</a>
       <h6> © 2020 Marco Giuseppe de Pinto. All rights reserved. </h6>
     </p>
