--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 <body style="background-color:white">
 
 <div class="jumbotron text-center" id="Jumbotron1" style="background-color:white">
-  <img src="assets/images/VAL_7302.jpeg" class="img-responsive" alt="Pic" width="300" height="300" id="myImg">
   <h2>Marco G. de Pinto</h2>
   <h4>Process Manager at <a href="https://www.amazon.it/">Amazon</a></h4>
   <p>
@@ -35,13 +34,14 @@
     <a href="https://www.linkedin.com/in/marcogdepinto/" title="LinkedIn"><i class="fa fa-linkedin" style="font-size: 30px;"></i></a>
     <a href="https://github.com/marcogdepinto" title="Github"><i class="fa fa-github" style="font-size: 30px;"></i></a>
   </p>
+  <img src="assets/images/VAL_7302.jpeg" class="img-responsive" alt="Pic" width="300" height="300" id="myImg">
 </div>
 
 <div class="panel-footer panel-custom" id="myFooter" style="background-color:white">
   <div class="jumbotron text-center" style="background-color:white">
     <p>
       <a href="#Jumbotron1" title="Home">&nbsp;&nbsp;Home&nbsp;&nbsp;</a>
-      <a href="https://github.com/marcogdepinto" title="Github">&nbsp;&nbsp;Projects&nbsp;&nbsp;</a>
+      <a href="https://github.com/marcogdepinto" title="Github">&nbsp;&nbsp;Github&nbsp;&nbsp;</a>
       <a href="https://public.tableau.com/profile/marco.giuseppe.de.pinto#!/">&nbsp;&nbsp;Tableau Public&nbsp;&nbsp;</a>
       <h6> © 2020 Marco Giuseppe de Pinto. All rights reserved. </h6>
     </p>
