--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Marco G. de Pinto | Process Manager at Amazon.</title>
+  <title>Marco Giuseppe de Pinto | Process Manager at Amazon.</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Expert in cross-functional project management, program management, Python software development, change management and process engineering.">
-  <meta property="og:title" content="Marco G. de Pinto | Process Manager at Amazon.">
+  <meta name="description" content="Skilled in process improvement, change management, program management, project management, strategy, process design, data analysis, python and business transformation.">
+  <meta property="og:title" content="Marco Giuseppe de Pinto | Process Manager at Amazon.">
   <meta property="og:url" content="https://marcogdepinto.com/">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-59556770-2"></script>
